...
          const hideSideTabs = shouldHideRootSideTabsForTabState(tabState);
          return {
          tabBarLabel: "Activity",
          tabBarButton: (props) => (
            <RootTabButton
              {...props}
              testID="root-tab__activity"
              alignTowardsCamera="right"
              hidden={hideSideTabs}
            />
          ),
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="sparkles-outline" size={size} color={color} />
...
