appId: com.buildtrack.app.local
---
- runFlow:
    when:
      visible: "Allow.*Photos.*"
    commands:
      - tapOn: "Allow.*Photos.*"
- runFlow:
    when:
      visible: "Allow Full Access"
    commands:
      - tapOn: "Allow Full Access"
- runFlow:
    when:
      visible: "Select Photos.*"
    commands:
      - tapOn: "Select Photos.*"
- runFlow:
    when:
      platform: ios
    commands:
      - tapOn:
          id: "PXGGridLayout-Info"
          index: 0
          optional: true
- runFlow:
    when:
      visible: "Add"
    commands:
      - tapOn: "Add"
- runFlow:
    when:
      visible: "Done"
    commands:
      - tapOn: "Done"
